--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,14 @@
 <app-header></app-header>
 
+<main>
+  <ul id="users">
+    <li>
+      <app-user></app-user>
+    </li>
+  </ul>
+</main>
+
+
 <!-- <header>
   <img src="assets/angular-logo.png" alt="The Angular logo: The letter 'A'" />
   <h1>Let's get started!</h1>
