--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,1 +1,15 @@
-<p>{{name}}</p>
+<section id="tasks">
+  <header>
+    <p>{{name}}'s Tasks</p>
+    <menu>
+      <button>Add Task</button>
+    </menu>
+  </header>
+
+  <ul>
+    <li>
+      
+    </li>
+  </ul>
+</section>
+
