--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -3,7 +3,7 @@
   <time>{{task.dueDate}}</time>
   <P>{{task.summary}}</P>
   <p class="actions">
-    <button>Complete</button>
+    <button (click)="onCompleteTask()">Complete</button>
   </p>
 </article>
 
