--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,8 +1,13 @@
+
+@if (isAddingTask) {
+  <app-new-task />
+}
+
 <section id="tasks">
   <header>
     <p>{{name}}'s Tasks</p>
     <menu>
-      <button>Add Task</button>
+      <button (click)="onStartAddTask()">Add Task</button>
     </menu>
   </header>
 
