--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,9 +1,10 @@
-<article>
-  <h2>{{task.title}}</h2>
-  <time>{{task.dueDate}}</time>
-  <P>{{task.summary}}</P>
-  <p class="actions">
-    <button (click)="onCompleteTask()">Complete</button>
-  </p>
-</article>
-
+<app-card>
+  <article>
+    <h2>{{ task.title }}</h2>
+    <time>{{ task.dueDate }}</time>
+    <P>{{ task.summary }}</P>
+    <p class="actions">
+      <button (click)="onCompleteTask()">Complete</button>
+    </p>
+  </article>
+</app-card>
